refactor: modernize Stream API with toList() and extract string constants
Replace Collectors.toList() with the more concise Stream.toList() across
spec, MCP, and backlog services. Extract repeated magic strings into named
constants in BacklogTaskToolExecutor (field keys, error messages),
MCPExecutionService (client name, protocol version), AppearanceRefreshHandler
(CSS suffix fragments), and AppearanceSettingsComponent (placeholder label).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>